--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -19,3 +19,14 @@
   }
 }
 
+.custom-scroll-hide {
+  scrollbar-width: none;
+  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE 10+ */
+}
+
+.custom-scroll-hide::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, Opera */
+}
